feat: add user dtos to swagger.yaml
