# server/controller/ProjectController.ts
@@ -550,7 +550,7 @@ class ProjectController extends BaseController {
    *         content:
    *           application/json:
    *             schema:
-   *               $ref: '#/components/schemas/GeneralResponseDTO'
+   *               $ref: '#/components/schemas/InviteTokenVerificationResponseDTO'
    *       400:
    *         description: Bad request
    *         content:
